sample-quickboot-mybatis-plus/kubernetes/network-policy/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns1
  labels:
    name: ns1
    password: aaa
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns2
  labels:
    name: ns2
    password: aaa
