sample-quickboot-mybatis-plus/kubernetes/network-policy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: ns1
  labels:
    app: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: registry.cn-hangzhou.aliyuncs.com/mengweijin/sample-quickboot-mybatis-plus:0.0.1.2-SNAPSHOT
          # IfNotPresent, Always, Never
          imagePullPolicy: IfNotPresent
          args: ['-Xmx100m', '--server.ssl.enabled=false']
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: ns1
spec:
  # type: NodePort
  selector:
    app: app1
  ports:
    # 默认情况下，为了方便起见，`targetPort` 被设置为与 `port` 字段相同的值。
    - port: 8080
      targetPort: 8080
      # 在 Istio Gateway 中必须配置，并且格式为："<protocol>[-<suffix>]"
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: ns1
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: mengweijin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1
                port:
                  number: 8080




---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cross
  namespace: ns2
  labels:
    app: cross
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cross
  template:
    metadata:
      labels:
        app: cross
    spec:
      containers:
        - name: cross
          image: registry.cn-hangzhou.aliyuncs.com/mengweijin/sample-quickboot-mybatis-plus:0.0.1.2-SNAPSHOT
          # IfNotPresent, Always, Never
          imagePullPolicy: IfNotPresent
          args: ['-Xmx100m', '--server.ssl.enabled=false']
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cross
  namespace: ns2
spec:
  # type: NodePort
  selector:
    app: cross
  ports:
    # 默认情况下，为了方便起见，`targetPort` 被设置为与 `port` 字段相同的值。
    - port: 8080
      targetPort: 8080
      # 在 Istio Gateway 中必须配置，并且格式为："<protocol>[-<suffix>]"
      name: http
